# CHANGELOG

## v0.5 (future)

### Features

- Cleaner, consistent interface

### Refactored

- Re-implemented using [cobra](https://pkg.go.dev/github.com/spf13/cobra)

## v0.4 (2020-06-20)

### Features

- Added support for the `SUPD_FILE` environment variable for controlling where the updates file is located.
- Added `supd` command to set or view today's plan. See `supd help plan` for more details.
- Added support for `-h`, `-help`, and `--help` flags
- Added support for `-v`, `-version`, and `--version` flags

## v0.3 (2020-06-13)

### Features

- The `help` command is now empowered to show usage instructions for other sub-commands. You may now run `supd help edit` to see detailed usage instructions for the `supd edit` command. You can even run `supd help help`, though it's a bit redundant.

### Removals

- Removed the `-h` flag from the root command to show help. We will only support using the `supd help` command to view the help.

## v0.2 (2020-06-13)

### Features

- Added an `edit` command which opens the updates file in `$EDITOR`